--- a/src/Components/UI/NavBar/NavBar.css
+++ b/src/Components/UI/NavBar/NavBar.css
@@ -1,28 +1,27 @@
-.navbar{
+*{
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	text-decoration: none;
+	border: none;
+	outline: none;
+}
+
+nav {
+    background-color: #745e46;
+    height: 100px;
+}
+
+h1{
+    text-align: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+ul {
+    list-style: none;
     display: flex;
-}
-.itemlist{
-    position: absolute;
-    right: 60pc;
-   
-}
-.nav-item{
-    text-decoration: none;
-    color: whitesmoke;
-    margin-left: 10px;
-    margin: 0.5rem;
-    position: center;
-    align-items: center;
+    justify-content: center;
+    justify-content: space-evenly;
+    padding-top: 20px;
 
-
-}
-.img{
-    background: none;
-    border: none ;
-    cursor:pointer;
-    outline: inherit;
-    width: 6%;
-    position: absolute;
-    right: 0;
-   
 }
